--- a/index.html
+++ b/index.html
@@ -1,5 +1,35 @@
 <HTML>
+  
+<!-- About Section BEGINS -->
+  <div class="about" id="about">
+    <h2><span class="underline-magical-sub-header">About</span></h2>
+    <img src="./images/asmitjainProfile.jpg" alt="It's me, Asmit">
+    <div class="about-grid">
 
+
+      <p>
+        I’m an MS Mechanical Engineer from the University of Massachusetts Amherst with over 2 years of experience in the manufacturing sector.
+        Currently I am working as an Additive Manufactruing & Design Engineer at ADDFab Lab - UMass Amherst.</p>
+
+
+      <p><b>Looking for full time opportuinities starting in September 2019.</b></p>
+
+      <h4>Recent workplaces:</h4>
+      <ul>
+        <li> Additive Manufacturing & Design Engineer at <a href="https://www.umass.edu/ials/addfab" target="_blank" alt="Link to the ADDFab Website">Kayak</a> since January 2019.</li>
+              </ul>
+
+
+      <button type="button" class="button" onclick="window.open('https://www.slideshare.net/slideshow/embed_code/key/jxfWwyC1lNEVtY','_blank');" alt="Link to Resume">Resume</button>
+
+      <br>
+      <br>
+      <br>
+  </div>
+  </div>
+  <!-- About Section ENDS -->
+  
+  
 <!-- External links Section BEGINS -->
   <div class="footer">
     <span><a href="https://github.com/asmitjain" target="_blank"><img src="./images/social/github.svg" alt="Link to Github Profile"></a></span>
