--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <!-- About Section BEGINS -->
   <div class="about" id="about">
     <h2><span class="underline-magical-sub-header">About</span></h2>
-    <img src="./images/asmitjainProfile.jpg" alt="It's me, Asmit">
+    <img src="./images/asmitjainProfile.jpeg" alt="It's me, Asmit">
     <div class="about-grid">
 
 
@@ -16,7 +16,7 @@
 
       <h4>Recent workplaces:</h4>
       <ul>
-        <li> Additive Manufacturing & Design Engineer at <a href="https://www.umass.edu/ials/addfab" target="_blank" alt="Link to the ADDFab Website">Kayak</a> since January 2019.</li>
+        <li> Additive Manufacturing & Design Engineer at <a href="https://www.umass.edu/ials/addfab" target="_blank" alt="Link to the ADDFab Website">ADDFab</a> since January 2019.</li>
               </ul>
 
 
