--- a/index.html
+++ b/index.html
@@ -1,4 +1,30 @@
-<HTML>
+<!DOCTYPE HTML>
+<html>
+
+<head>
+  <title>Asmit's Portfolio</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <link href="https://fonts.googleapis.com/css?family=Zilla+Slab&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Varela+Round&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Work+Sans&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+  <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
+  <link rel="stylesheet" href="./css/style.css">
+</head>
+
+<body>
+  <script src="./js/index.js"></script>
+  <!-- Sticky Header BEGINS -->
+  <div id="sticky-header">
+    <div class="top-navigation">
+      <span><a href="#a">A</a></span>
+      <span><a href="#b">B</a></span>
+      <span><a href="#c">C</a></span>
+      <span><a href="https://www.slideshare.net/slideshow/embed_code/key/jxfWwyC1lNEVtY" target="_blank">RESUME</a></span>
+    </div>
+  </div>
+  <!-- Sticky Header ENDS -->
   
 <!-- About Section BEGINS -->
   <div class="about" id="about">
