--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="top-navigation">
       <span><a href="#a">A</a></span>
       <span><a href="#b">B</a></span>
-      <span><a href="#c">C</a></span>
+      <span><a href="#about">ABOUT</a></span>
       <span><a href="https://www.slideshare.net/slideshow/embed_code/key/jxfWwyC1lNEVtY" target="_blank">RESUME</a></span>
     </div>
   </div>
