--- a/index.html
+++ b/index.html
@@ -42,8 +42,13 @@
 
       <h4>Recent workplaces:</h4>
       <ul>
-        <li> Additive Manufacturing & Design Engineer at <a href="https://www.umass.edu/ials/addfab" target="_blank" alt="Link to the ADDFab Website">ADDFab</a> since January 2019.</li>
-              </ul>
+        <li> Additive Manufacturing & Design Engineer at <a href="https://www.umass.edu/ials/addfab" target="_blank" alt="Link to the ADDFab Website">ADDFab Lab</a> since January 2019.</li>
+        <li> Research Assistant at <a href="https://blogs.umass.edu/xiandu/" target="_blank" alt="Link to the Intelligent Sensing Lab Website">Intelligent Sensing Lab</a> since September 2018.</li>
+        <li> Technical Services Intern at <a href="https://www.umass.edu/ials/addfab" target="_blank" alt="Link to the ADDFab Website">ADDFab</a> since January 2019.</li>
+        <li> Production Management Intern at <a href="https://www.umass.edu/ials/addfab" target="_blank" alt="Link to the ADDFab Website">ADDFab</a> since January 2019.</li>
+        <li> Engineer at <a href="https://www.umass.edu/ials/addfab" target="_blank" alt="Link to the ADDFab Website">ADDFab</a> since January 2019.</li>
+        <li> Maintenance Engineer Intern at <a href="https://www.umass.edu/ials/addfab" target="_blank" alt="Link to the ADDFab Website">ADDFab</a> since January 2019.</li>
+      </ul>
 
 
       <button type="button" class="button" onclick="window.open('https://www.slideshare.net/slideshow/embed_code/key/jxfWwyC1lNEVtY','_blank');" alt="Link to Resume">Resume</button>
