--- a/index.html
+++ b/index.html
@@ -18,10 +18,13 @@
   <!-- Sticky Header BEGINS -->
   <div id="sticky-header">
     <div class="top-navigation">
-      <span><a href="#a">A</a></span>
-      <span><a href="#b">B</a></span>
       <span><a href="#about">ABOUT</a></span>
+      <span><a href="#education">EDUCATION</a></span>
+      <span><a href="#experience">EXPERIENCE</a></span>
+      <span><a href="#projects">PROJECTS</a></span>
+      <span><a href="#license&certifications">LICENCES & CERTIFICATIONS</a></span>
       <span><a href="https://www.slideshare.net/slideshow/embed_code/key/jxfWwyC1lNEVtY" target="_blank">RESUME</a></span>
+      <span><a href="https://drive.google.com/file/d/1KL8RR6qhlLamPCA4y6LxhANHYedu8bVs/view?usp=sharing">CV</a></span>
     </div>
   </div>
   <!-- Sticky Header ENDS -->
@@ -44,10 +47,10 @@
       <ul>
         <li> Additive Manufacturing & Design Engineer at <a href="https://www.umass.edu/ials/addfab" target="_blank" alt="Link to the ADDFab Website">ADDFab Lab</a> since January 2019.</li>
         <li> Research Assistant at <a href="https://blogs.umass.edu/xiandu/" target="_blank" alt="Link to the Intelligent Sensing Lab Website">Intelligent Sensing Lab</a> since September 2018.</li>
-        <li> Technical Services Intern at <a href="https://www.umass.edu/ials/addfab" target="_blank" alt="Link to the ADDFab Website">ADDFab</a> since January 2019.</li>
-        <li> Production Management Intern at <a href="https://www.umass.edu/ials/addfab" target="_blank" alt="Link to the ADDFab Website">ADDFab</a> since January 2019.</li>
-        <li> Engineer at <a href="https://www.umass.edu/ials/addfab" target="_blank" alt="Link to the ADDFab Website">ADDFab</a> since January 2019.</li>
-        <li> Maintenance Engineer Intern at <a href="https://www.umass.edu/ials/addfab" target="_blank" alt="Link to the ADDFab Website">ADDFab</a> since January 2019.</li>
+        <li> Technical Services Intern at <a href="http://www.vecv.in/" target="_blank" alt="Link to the VECV Website">Volvo_Eicher Commercial Vehicles</a> from July 2018 to September 2018.</li>
+        <li> blue_car  Production Management Intern at <a href="https://www.mantruckandbus.com/en/company/man-at-a-glance/structure.html" target="_blank" alt="Link to the MAN Trucks Website">MAN Trucks</a> from June 2019 to July 2019.</li>
+        <li> Engineer at <a href="https://www.mahle.com/" target="_blank" alt="Link to the MAHLE Website">MAHLE</a> from April 2016 to June 2017.</li>
+        <li> Maintenance Engineer Intern at <a href="https://www.mantruckandbus.com/en/company/man-at-a-glance/structure.html" target="_blank" alt="Link to the MAN Trucks Website">MAN Trucks</a> from June 2014 to July 2014.</li>
       </ul>
 
 
