--- a/index.html
+++ b/index.html
@@ -64,21 +64,20 @@
   <!-- About Section ENDS -->
   
   <!-- Education Section BEGINS -->
-  <div class="education" id="education">
-    <h2><span class="underline-magical-sub-header">Education</span></h2>
-    <div class="education-grid">
+    <div class="education" id="education">
+      <h2><span class="underline-magical-sub-header">Education</span></h2>
+      <div class="education-grid">
 
       <h4>University of Massachusetts</h4>
       <img src="./images/asmitjainUMASS.jpg" alt="My Grad College">
-      <p>
-        Master of Science (MS) Mechanical Engineer.</p>
-      
+      <p> Master of Science (MS) Mechanical Engineer.</p>
+      <br>
+      <br>
       <h4>MIT Ujjain - RGPV University</h4>
       <img src="./images/asmitjainMIT.jpg" alt="My Under-Grad College">
       <p>
         Bachelor of Science (BS) Mechanical Engineer.</p>
-      <br>
-      <br>
+      
       <br>
       <br>
   </div>
