--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Asmit's Portfolio</title>
+  <title>Asmit Jain's Portfolio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <link href="https://fonts.googleapis.com/css?family=Zilla+Slab&display=swap" rel="stylesheet">
@@ -25,6 +25,7 @@
       <span><a href="#license&certifications">LICENCES & CERTIFICATIONS</a></span>
       <span><a href="https://www.slideshare.net/slideshow/embed_code/key/jxfWwyC1lNEVtY" target="_blank">RESUME</a></span>
       <span><a href="https://drive.google.com/file/d/1KL8RR6qhlLamPCA4y6LxhANHYedu8bVs/view?usp=sharing">CV</a></span>
+      <span><a href="#contact">CONTACT</a></span>
     </div>
   </div>
   <!-- Sticky Header ENDS -->
