--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <span><a href="#experience">EXPERIENCE</a></span>
       <span><a href="#projects">PROJECTS</a></span>
       <span><a href="#license&certifications">LICENCES & CERTIFICATIONS</a></span>
-      <span><a href="https://www.slideshare.net/slideshow/embed_code/key/jxfWwyC1lNEVtY" target="_blank">RESUME</a></span>
+      <span><a href="https://drive.google.com/file/d/1mKp8SMaigExeC5JSFWjSTU_Aj5dEMAst/view" target="_blank">RESUME</a></span>
       <span><a href="https://drive.google.com/file/d/1KL8RR6qhlLamPCA4y6LxhANHYedu8bVs/view?usp=sharing">CV</a></span>
       <span><a href="#contact">CONTACT</a></span>
     </div>
@@ -55,7 +55,7 @@
       </ul>
 
 
-      <button type="button" class="button" onclick="window.open('https://www.slideshare.net/slideshow/embed_code/key/jxfWwyC1lNEVtY','_blank');" alt="Link to Resume">Resume</button>
+      <button type="button" class="button" onclick="window.open('https://drive.google.com/file/d/1mKp8SMaigExeC5JSFWjSTU_Aj5dEMAst/view','_blank');" alt="Link to Resume">Resume</button>
 
       <br>
       <br>
