--- a/index.html
+++ b/index.html
@@ -30,6 +30,28 @@
   </div>
   <!-- Sticky Header ENDS -->
   
+  <!-- Projects Section BEGINS -->
+  <div class="projects" id="projects">
+    <h2><span class="underline-magical-sub-header">Projects</span></h2>
+    <p>
+      general description.
+    </p>
+  </div>
+
+  <div class="prjts">
+    <div class="projects">
+      <a href="Project1.html" target="_blank">
+        <img src="./images/asmitjainUMASS">
+        <h3 class="card-title">ABC</h3>
+        <p class="card-subtitle">XYZ</p>
+      </a>
+    </div>
+
+    
+  </div>
+  </div>
+  <!-- Projects Section ENDS -->
+  
 <!-- About Section BEGINS -->
   <div class="about" id="about">
     <h2><span class="underline-magical-sub-header">About</span></h2>
