--- a/Project1.html
+++ b/Project1.html
@@ -31,26 +31,17 @@
   <!-- Sticky Header ENDS -->
   
   
-  <!-- Education Section BEGINS -->
-    <div class="education" id="education">
-      <h2><span class="underline-magical-sub-header">Education</span></h2>
-      <div class="education-grid">
+  <!-- Project1 Section BEGINS -->
+    <div class="projects" id="projects">
+      <h2><span class="underline-magical-sub-header">Modelling, Simulation & Optimization of a Formula SAE chassis using SolidWorks & ANSYS</span></h2>
+      <div class="projects-grid">
 
       <h4>University of Massachusetts</h4>
       <img src="./images/asmitjainUMASS.jpg" alt="My Grad College">
-      <p> Master of Science (MS) Mechanical Engineer.</p>
+      <p> - Designed a chassis for Finite Element Analysis and verfied the model for stress, stain, etc</p>
       <br>
       <br>
-      <h4>MIT Ujjain - RGPV University</h4>
-      <img src="./images/asmitjainMIT.jpg" alt="My Under-Grad College">
-      <p>
-        Bachelor of Science (BS) Mechanical Engineer.</p>
       
-      <br>
-      <br>
-  </div>
-  </div>
-  <!-- Education Section ENDS -->
   
 <!-- External links Section BEGINS -->
   <div class="footer">
