--- a/Project1.html
+++ b/Project1.html
@@ -33,16 +33,17 @@
   
   <!-- Project1 Section BEGINS -->
     <div class="projects" id="projects">
-      <h2><span class="underline-magical-sub-header">Modelling, Simulation & Optimization of a Formula SAE chassis using SolidWorks & ANSYS</span></h2>
+      <h2><span class="underline-magical-sub-header">Project 1</span></h2>
       <div class="projects-grid">
 
-      <h4>University of Massachusetts</h4>
+      <h4>Modelling, Simulation & Optimization of a Formula SAE chassis using SolidWorks & ANSYS</h4>
       <img src="./images/asmitjainUMASS.jpg" alt="My Grad College">
       <p> - Designed a chassis for Finite Element Analysis and verfied the model for stress, stain, etc</p>
       <br>
       <br>
+    </div>
+   <!-- Project1 Section ENDS -->
       
-  
 <!-- External links Section BEGINS -->
   <div class="footer">
     <span><a href="https://github.com/asmitjain" target="_blank"><img src="./images/social/github.svg" alt="Link to Github Profile"></a></span>
