--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <!-- Sticky Header ENDS -->
   
   <!-- Projects Section BEGINS -->
-  <div class="projects" id="projects">
+  <div class="projects-design" id="projects-design">
     <h2><span class="underline-magical-sub-header">Projects</span></h2>
     <p>
       general description.
