--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <!-- Sticky Header ENDS -->
   
   <!-- Projects Section BEGINS -->
-  <div class="projects-design" id="projects-design">
+  <div class="projects" id="projects">
     <h2><span class="underline-magical-sub-header">Projects</span></h2>
     <p>
       general description.
@@ -39,7 +39,7 @@
   </div>
 
   <div class="prjts">
-    <div class="projects">
+    <div class="sub-projects">
       <a href="Project1.html" target="_blank">
         <img src="./images/asmitjainUMASS.jpg" class="projects-image" alt="Image of my project">
         <h3 class="card-title">ABC</h3>
