--- a/index.html
+++ b/index.html
@@ -46,7 +46,13 @@
         <p class="card-subtitle">XYZ</p>
       </a>
     </div>
-
+    <div class="sub-projects">
+      <a href="Project2.html" target="_blank">
+        <img src="./images/asmitjainMIT.jpg" class="projects-image" alt="Image of my project2">
+        <h3 class="card-title">DEF</h3>
+        <p class="card-subtitle">PQR</p>
+      </a>
+    </div>
     
   </div>
   </div>
