--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <div class="prjts">
     <div class="sub-projects">
       <a href="Project1.html" target="_blank">
-        <img src="./images/asmitjainUMASS.jpg" class="projects-image" alt="Image of my project">
+        <img src="./images/asmitjainthumbnailUMASS.jpg" class="projects-image" alt="Image of my project">
         <h3 class="card-title">ABC</h3>
         <p class="card-subtitle">XYZ</p>
       </a>
