--- a/Project1.html
+++ b/Project1.html
@@ -18,7 +18,7 @@
   <!-- Sticky Header BEGINS -->
   <div id="sticky-header">
     <div class="top-navigation">
-      <span><a href="#about">ABOUT</a></span>
+      <span><a href="index.html">ABOUT</a></span>
       <span><a href="#education">EDUCATION</a></span>
       <span><a href="#experience">EXPERIENCE</a></span>
       <span><a href="#projects">PROJECTS</a></span>
