--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
   <div class="prjts">
     <div class="sub-projects">
-      <a href="Project1.html">
+      <a href="Project1.html" target="_self">
         <img src="./images/asmitjainthumbnailUMASS.jpg" class="projects-image" alt="Image of my project">
         <h3 class="card-title">ABC</h3>
         <p class="card-subtitle">XYZ</p>
