--- a/index.html
+++ b/index.html
@@ -30,6 +30,14 @@
   </div>
   <!-- Sticky Header ENDS -->
   
+  <!-- Introduction Section Begins -->
+  <div class="landing-header">
+    <p id="personal-tag-para"> <span id="personal-tag" class="underline--magical"></span> </p>
+    <h1 id="page-header">Hi I'm Asmit!</h1>
+    <h2 id="page-subheader">Mechanical Engineer with over 2 years of industry experience.</h2>
+  </div>
+  <!-- Introduction Section Ends -->
+  
   <!-- Projects Section BEGINS -->
   <div class="projects" id="projects">
     <h2><span class="underline-magical-sub-header">Projects</span></h2>
