--- a/index.html
+++ b/index.html
@@ -33,43 +33,18 @@
   <!-- Introduction Section Begins -->
   <div class="landing-header">
     <p id="personal-tag-para"> <span id="personal-tag" class="underline--magical"></span> </p>
-    <h1 id="page-header">Hi I'm Asmit!</h1>
-    <h2 id="page-subheader">Mechanical Engineer with over 2 years of industry experience.</h2>
-  </div>
+    <h1 id="page-header">Hi, I'm Asmit!</h1>
+    <h2 id="page-subheader">Welcome to my Work Portfolio</h2>
+   </div>
   <br>
       <br>
       <br>
   <!-- Introduction Section Ends -->
   
-  <!-- Projects Section BEGINS -->
-  <div class="projects" id="projects">
-    <h2><span class="underline-magical-sub-header">Projects</span></h2>
-    <p>
-      general description.
-    </p>
-  </div>
-
-  <div class="prjts">
-    <div class="sub-projects">
-      <a href="Project1.html" target="_self">
-        <img src="./images/asmitjainthumbnailUMASS.jpg" class="projects-image" alt="Image of my project">
-        <h3 class="card-title">ABC</h3>
-        <p class="card-subtitle">XYZ</p>
-      </a>
-    </div>
-    <div class="sub-projects">
-      <a href="Project2.html" target="_blank">
-        <img src="./images/asmitjainMIT.jpg" class="projects-image" alt="Image of my project2">
-        <h3 class="card-title">DEF</h3>
-        <p class="card-subtitle">PQR</p>
-      </a>
-    </div>
-    
-  </div>
-  </div>
-  <!-- Projects Section ENDS -->
+  <br>
+  <br>
   
-<!-- About Section BEGINS -->
+  <!-- About Section BEGINS -->
   <div class="about" id="about">
     <h2><span class="underline-magical-sub-header">About</span></h2>
     <img src="./images/asmitjainProfile.jpeg" alt="It's me, Asmit">
@@ -123,6 +98,65 @@
   </div>
   </div>
   <!-- Education Section ENDS -->
+  
+  
+  <!-- Projects Section BEGINS -->
+  <div class="projects" id="projects">
+    <h2><span class="underline-magical-sub-header">Projects</span></h2>
+    <p>
+      general description.
+    </p>
+  </div>
+
+  <div class="prjts">
+    <div class="sub-projects">
+      <a href="Project1.html" target="_self">
+        <img src="./images/asmitjainthumbnailUMASS.jpg" class="projects-image" alt="Image of my project">
+        <h3 class="card-title">Designing, Prototyping & Validating a 3D Scanner for Medical Applications</h3>
+        <p class="card-subtitle">XYZ</p>
+      </a>
+    </div>
+    <div class="sub-projects">
+      <a href="Project2.html" target="_blank">
+        <img src="./images/asmitjainMIT.jpg" class="projects-image" alt="Image of my project2">
+        <h3 class="card-title">Modelling, Simulation & Optimization of a Formula SAE Chassis using SolidWorks & ANSYS</h3>
+        <p class="card-subtitle">PQR</p>
+      </a>
+    </div>
+    <div class="sub-projects">
+      <a href="Project3.html" target="_blank">
+        <img src="./images/asmitjainMIT.jpg" class="projects-image" alt="Image of my project2">
+        <h3 class="card-title">DEF</h3>
+        <p class="card-subtitle">PQR</p>
+      </a>
+    </div>
+    <div class="sub-projects">
+      <a href="Project4.html" target="_blank">
+        <img src="./images/asmitjainMIT.jpg" class="projects-image" alt="Image of my project2">
+        <h3 class="card-title">DEF</h3>
+        <p class="card-subtitle">PQR</p>
+      </a>
+    </div>
+    <div class="sub-projects">
+      <a href="Project5.html" target="_blank">
+        <img src="./images/asmitjainMIT.jpg" class="projects-image" alt="Image of my project2">
+        <h3 class="card-title">DEF</h3>
+        <p class="card-subtitle">PQR</p>
+      </a>
+    </div>
+    <div class="sub-projects">
+      <a href="Project6.html" target="_blank">
+        <img src="./images/asmitjainMIT.jpg" class="projects-image" alt="Image of my project2">
+        <h3 class="card-title">DEF</h3>
+        <p class="card-subtitle">PQR</p>
+      </a>
+    </div>
+    
+  </div>
+  </div>
+  <!-- Projects Section ENDS -->
+  
+
   
 <!-- External links Section BEGINS -->
   <div class="footer">
