--- a/index.html
+++ b/index.html
@@ -82,8 +82,29 @@
     <div class="education" id="education">
       <h2><span class="underline-magical-sub-header">Education</span></h2>
       <div class="education-grid">
-
+      <a>
       <h4>University of Massachusetts</h4>
+       <img src="./images/asmitjainUMASS.jpg" alt="My Grad College">
+        <h3 class="card-title">Master of Science (MS)</h3>
+        <p class="card-subtitle">Mechanical Engineer</p>
+      </a>
+      <h4>MIT Ujjain - RGPV University</h4>
+      <img src="./images/asmitjainMIT.jpg" alt="My Under-Grad College">
+      <p>
+        Bachelor of Science (BS) Mechanical Engineer.</p>
+      
+      <br>
+      <br>
+  </div>
+  </div>
+  <!-- Education Section ENDS -->
+  
+  <!-- Experience Section BEGINS -->
+    <div class="experience" id="experience">
+      <h2><span class="underline-magical-sub-header">Experience</span></h2>
+      <div class="experience-grid">
+
+      <h4>ADDFab Lab - University of Massachusetts</h4>
       <img src="./images/asmitjainUMASS.jpg" alt="My Grad College">
       <p> Master of Science (MS) Mechanical Engineer.</p>
       <br>
@@ -97,8 +118,7 @@
       <br>
   </div>
   </div>
-  <!-- Education Section ENDS -->
-  
+  <!-- Experience Section ENDS -->
   
   <!-- Projects Section BEGINS -->
   <div class="projects" id="projects">
