--- a/index.html
+++ b/index.html
@@ -88,11 +88,12 @@
         <h3 class="card-title">Master of Science (MS)</h3>
         <p class="card-subtitle">Mechanical Engineer</p>
       </a>
+        <a>
       <h4>MIT Ujjain - RGPV University</h4>
-      <img src="./images/asmitjainMIT.jpg" alt="My Under-Grad College">
-      <p>
-        Bachelor of Science (BS) Mechanical Engineer.</p>
-      
+       <img src="./images/asmitjainMIT.jpg" alt="My Under-Grad College">
+        <h3 class="card-title">Bachelor of Science (BS)</h3>
+        <p class="card-subtitle">Mechanical Engineer</p>
+      </a>
       <br>
       <br>
   </div>
