--- a/index.html
+++ b/index.html
@@ -83,17 +83,21 @@
       <h2><span class="underline-magical-sub-header">Education</span></h2>
       <div class="education-grid">
       <a>
+     <div>
       <h4>University of Massachusetts</h4>
        <img src="./images/asmitjainUMASS.jpg" alt="My Grad College">
         <h3 class="card-title">Master of Science (MS)</h3>
         <p class="card-subtitle">Mechanical Engineer</p>
-      </a>
+       </a>
+      </div>
+        <div>
         <a>
       <h4>MIT Ujjain - RGPV University</h4>
        <img src="./images/asmitjainMIT.jpg" alt="My Under-Grad College">
         <h3 class="card-title">Bachelor of Science (BS)</h3>
         <p class="card-subtitle">Mechanical Engineer</p>
       </a>
+        </div>
       <br>
       <br>
   </div>
