--- a/index.html
+++ b/index.html
@@ -58,17 +58,6 @@
 
       <p><b>Looking for full time opportuinities starting in September 2019.</b></p>
 
-      <h4>Recent workplaces:</h4>
-      <ul>
-        <li> Additive Manufacturing & Design Engineer at <a href="https://www.umass.edu/ials/addfab" target="_blank" alt="Link to the ADDFab Website">ADDFab Lab</a> since January 2019.</li>
-        <li> Research Assistant at <a href="https://blogs.umass.edu/xiandu/" target="_blank" alt="Link to the Intelligent Sensing Lab Website">Intelligent Sensing Lab</a> since September 2018.</li>
-        <li> Technical Services Intern at <a href="http://www.vecv.in/" target="_blank" alt="Link to the VECV Website">Volvo_Eicher Commercial Vehicles</a> from July 2018 to September 2018.</li>
-        <li> blue_car  Production Management Intern at <a href="https://www.mantruckandbus.com/en/company/man-at-a-glance/structure.html" target="_blank" alt="Link to the MAN Trucks Website">MAN Trucks</a> from June 2019 to July 2019.</li>
-        <li> Engineer at <a href="https://www.mahle.com/" target="_blank" alt="Link to the MAHLE Website">MAHLE</a> from April 2016 to June 2017.</li>
-        <li> Maintenance Engineer Intern at <a href="https://www.mantruckandbus.com/en/company/man-at-a-glance/structure.html" target="_blank" alt="Link to the MAN Trucks Website">MAN Trucks</a> from June 2014 to July 2014.</li>
-      </ul>
-
-
       <button type="button" class="button" onclick="window.open('https://drive.google.com/file/d/1mKp8SMaigExeC5JSFWjSTU_Aj5dEMAst/view','_blank');" alt="Link to Resume">Resume</button>
 
       <br>
@@ -104,9 +93,17 @@
     <div class="experience" id="experience">
       <h2><span class="underline-magical-sub-header">Experience</span></h2>
       <div class="experience-grid">
-
+<ul>
+        <li> Additive Manufacturing & Design Engineer at <a href="https://www.umass.edu/ials/addfab" target="_blank" alt="Link to the ADDFab Website">ADDFab Lab</a> since January 2019.</li>
+        <li> Research Assistant at <a href="https://blogs.umass.edu/xiandu/" target="_blank" alt="Link to the Intelligent Sensing Lab Website">Intelligent Sensing Lab</a> since September 2018.</li>
+        <li> Technical Services Intern at <a href="http://www.vecv.in/" target="_blank" alt="Link to the VECV Website">Volvo_Eicher Commercial Vehicles</a> from July 2018 to September 2018.</li>
+        <li> blue_car  Production Management Intern at <a href="https://www.mantruckandbus.com/en/company/man-at-a-glance/structure.html" target="_blank" alt="Link to the MAN Trucks Website">MAN Trucks</a> from June 2019 to July 2019.</li>
+        <li> Engineer at <a href="https://www.mahle.com/" target="_blank" alt="Link to the MAHLE Website">MAHLE</a> from April 2016 to June 2017.</li>
+        <li> Maintenance Engineer Intern at <a href="https://www.mantruckandbus.com/en/company/man-at-a-glance/structure.html" target="_blank" alt="Link to the MAN Trucks Website">MAN Trucks</a> from June 2014 to July 2014.</li>
+      </ul>
+        
       <h4>ADDFab Lab - University of Massachusetts</h4>
-      <img src="./images/asmitjainUMASS.jpg" alt="My Grad College">
+      <img src="./images/asmitjainUMS.jpg" alt="My Grad College">
       <p> Master of Science (MS) Mechanical Engineer.</p>
       <br>
       <br>
@@ -133,43 +130,43 @@
     <div class="sub-projects">
       <a href="Project1.html" target="_self">
         <img src="./images/asmitjainthumbnailUMASS.jpg" class="projects-image" alt="Image of my project">
-        <h3 class="card-title">Designing, Prototyping & Validating a 3D Scanner for Medical Applications</h3>
-        <p class="card-subtitle">XYZ</p>
+        <h3 class="card-title">3D SCANNER FOR MEDICAL APPLICATION</h3>
+        <p class="card-subtitle">DESIGN.PROTOTYPING.ANALYSIS</p>
       </a>
     </div>
     <div class="sub-projects">
       <a href="Project2.html" target="_blank">
         <img src="./images/asmitjainMIT.jpg" class="projects-image" alt="Image of my project2">
-        <h3 class="card-title">Modelling, Simulation & Optimization of a Formula SAE Chassis using SolidWorks & ANSYS</h3>
-        <p class="card-subtitle">PQR</p>
+        <h3 class="card-title">FORMULA SAE CHASSIS</h3>
+        <p class="card-subtitle">DESIGN.ANALYSIS</p>
       </a>
     </div>
     <div class="sub-projects">
       <a href="Project3.html" target="_blank">
         <img src="./images/asmitjainMIT.jpg" class="projects-image" alt="Image of my project2">
-        <h3 class="card-title">DEF</h3>
-        <p class="card-subtitle">PQR</p>
+        <h3 class="card-title">FAULT DETECTION & PREDICTION USING MACHINE LEARNING</h3>
+        <p class="card-subtitle">DAQ.VIBRATION.ML</p>
       </a>
     </div>
     <div class="sub-projects">
       <a href="Project4.html" target="_blank">
         <img src="./images/asmitjainMIT.jpg" class="projects-image" alt="Image of my project2">
-        <h3 class="card-title">DEF</h3>
-        <p class="card-subtitle">PQR</p>
+        <h3 class="card-title">PLC PROGRAMMING & HMI/SCADA</h3>
+        <p class="card-subtitle">INDUSTRIAL AUTOMATION</p>
       </a>
     </div>
     <div class="sub-projects">
       <a href="Project5.html" target="_blank">
         <img src="./images/asmitjainMIT.jpg" class="projects-image" alt="Image of my project2">
-        <h3 class="card-title">DEF</h3>
-        <p class="card-subtitle">PQR</p>
+        <h3 class="card-title">NEGATIVE POISSON'S RATIO MATERIAL</h3>
+        <p class="card-subtitle">LITHOGRAPHY. SOFT LITHOGRAPHY</p>
       </a>
     </div>
     <div class="sub-projects">
       <a href="Project6.html" target="_blank">
         <img src="./images/asmitjainMIT.jpg" class="projects-image" alt="Image of my project2">
-        <h3 class="card-title">DEF</h3>
-        <p class="card-subtitle">PQR</p>
+        <h3 class="card-title">BAJA SAE</h3>
+        <p class="card-subtitle">DESIGN . FABRICATION</p>
       </a>
     </div>
     
