--- a/Project1.html
+++ b/Project1.html
@@ -21,10 +21,10 @@
       <span><a href="index.html">ABOUT</a></span>
       <span><a href="#education">EDUCATION</a></span>
       <span><a href="#experience">EXPERIENCE</a></span>
-      <span><a href="#projects">PROJECTS</a></span>
-      <span><a href="#license&certifications">LICENCES & CERTIFICATIONS</a></span>
-      <span><a href="https://drive.google.com/file/d/1mKp8SMaigExeC5JSFWjSTU_Aj5dEMAst/view" target="_blank">RESUME</a></span>
-      <span><a href="https://drive.google.com/file/d/1KL8RR6qhlLamPCA4y6LxhANHYedu8bVs/view?usp=sharing">CV</a></span>
+      <span><a href="index.html#projects">PROJECTS</a></span>
+      <!--<span><a href="#license&certifications">LICENCES & CERTIFICATIONS</a></span>-->
+      <span><a href="https://drive.google.com/file/d/1mKp8SMaigExeC5JSFWjSTU_Aj5dEMAst/view" target="_blank">RESUME/CV</a></span>
+      <!--<span><a href="https://drive.google.com/file/d/1KL8RR6qhlLamPCA4y6LxhANHYedu8bVs/view?usp=sharing">CV</a></span>-->
       <span><a href="#contact">CONTACT</a></span>
     </div>
   </div>
@@ -39,6 +39,7 @@
       <h4>Modelling, Simulation & Optimization of a Formula SAE chassis using SolidWorks & ANSYS</h4>
       <img src="./images/asmitjainUMASS.jpg" alt="My Grad College">
       <p> - Designed a chassis for Finite Element Analysis and verfied the model for stress, stain, etc</p>
+      <br>
       <br>
       <br>
     </div>
