--- a/index.html
+++ b/index.html
@@ -18,13 +18,14 @@
   <!-- Sticky Header BEGINS -->
   <div id="sticky-header">
     <div class="top-navigation">
+      <span><a href="index.html">ASMIT JAIN</a></span>
       <span><a href="#about">ABOUT</a></span>
       <span><a href="#education">EDUCATION</a></span>
       <span><a href="#experience">EXPERIENCE</a></span>
       <span><a href="#projects">PROJECTS</a></span>
       <!--<span><a href="#license&certifications">LICENCES & CERTIFICATIONS</a></span>-->
-      <span><a href="https://drive.google.com/file/d/1mKp8SMaigExeC5JSFWjSTU_Aj5dEMAst/view" target="_blank">RESUME</a></span>
-      <span><a href="https://drive.google.com/file/d/1KL8RR6qhlLamPCA4y6LxhANHYedu8bVs/view?usp=sharing">CV</a></span>
+      <span><a href="https://drive.google.com/file/d/1mKp8SMaigExeC5JSFWjSTU_Aj5dEMAst/view" target="_blank">RESUME/CV</a></span>
+      <!--<span><a href="https://drive.google.com/file/d/1KL8RR6qhlLamPCA4y6LxhANHYedu8bVs/view?usp=sharing">CV</a></span>-->
       <span><a href="#contact">CONTACT</a></span>
     </div>
   </div>
@@ -174,7 +175,24 @@
   </div>
   <!-- Projects Section ENDS -->
   
-
+ <!-- Contacts Section BEGINS -->
+    <div class="contacts" id="contacts">
+      <h2><span class="underline-magical-sub-header">Contacts</span></h2>
+      <div class="contacts-grid">
+      <div class="column">
+      <h4>Want to know more? Let's Connect</h4>
+       <img src="./images/asmitjainMIT.jpg" alt="My Under-Grad College">
+        <p><b> GMAIL</b>: thisasmitgmail.com </p>
+        <p><b> YAHOO</b>: asmitjain@yahoo.in </p>
+        <p><b> OUTLOOK</b>: asmitjain@hotmail.com </p>
+        <p><b> UMASS</b>: asmitjain@umass.edu</p>
+      </div>
+      <br>
+      <br>
+      <br>
+  </div>
+  </div>
+  <!-- Contacts Section ENDS -->
   
 <!-- External links Section BEGINS -->
   <div class="footer">
