--- a/Project1.html
+++ b/Project1.html
@@ -18,14 +18,15 @@
   <!-- Sticky Header BEGINS -->
   <div id="sticky-header">
     <div class="top-navigation">
-      <span><a href="index.html">ABOUT</a></span>
-      <span><a href="#education">EDUCATION</a></span>
-      <span><a href="#experience">EXPERIENCE</a></span>
+      <span><a href="index.html">ASMIT JAIN</a></span>
+      <span><a href="index.html#about">ABOUT</a></span>
+      <span><a href="index.html#education">EDUCATION</a></span>
+      <span><a href="index.html#experience">EXPERIENCE</a></span>
       <span><a href="index.html#projects">PROJECTS</a></span>
       <!--<span><a href="#license&certifications">LICENCES & CERTIFICATIONS</a></span>-->
       <span><a href="https://drive.google.com/file/d/1mKp8SMaigExeC5JSFWjSTU_Aj5dEMAst/view" target="_blank">RESUME/CV</a></span>
       <!--<span><a href="https://drive.google.com/file/d/1KL8RR6qhlLamPCA4y6LxhANHYedu8bVs/view?usp=sharing">CV</a></span>-->
-      <span><a href="#contact">CONTACT</a></span>
+      <span><a href="index.html#contact">CONTACT</a></span>
     </div>
   </div>
   <!-- Sticky Header ENDS -->
