--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <!--<span><a href="#license&certifications">LICENCES & CERTIFICATIONS</a></span>-->
       <span><a href="https://drive.google.com/file/d/1mKp8SMaigExeC5JSFWjSTU_Aj5dEMAst/view" target="_blank">RESUME/CV</a></span>
       <!--<span><a href="https://drive.google.com/file/d/1KL8RR6qhlLamPCA4y6LxhANHYedu8bVs/view?usp=sharing">CV</a></span>-->
-      <span><a href="#contact">CONTACT</a></span>
+      <span><a href="#contacts">CONTACTS</a></span>
     </div>
   </div>
   <!-- Sticky Header ENDS -->
