--- a/Project1.html
+++ b/Project1.html
@@ -26,7 +26,7 @@
       <!--<span><a href="#license&certifications">LICENCES & CERTIFICATIONS</a></span>-->
       <span><a href="https://drive.google.com/file/d/1mKp8SMaigExeC5JSFWjSTU_Aj5dEMAst/view" target="_blank">RESUME/CV</a></span>
       <!--<span><a href="https://drive.google.com/file/d/1KL8RR6qhlLamPCA4y6LxhANHYedu8bVs/view?usp=sharing">CV</a></span>-->
-      <span><a href="index.html#contact">CONTACT</a></span>
+      <span><a href="index.html#contacts">CONTACTS</a></span>
     </div>
   </div>
   <!-- Sticky Header ENDS -->
@@ -37,9 +37,42 @@
       <h2><span class="underline-magical-sub-header">Project 1</span></h2>
       <div class="projects-grid">
 
-      <h4>Modelling, Simulation & Optimization of a Formula SAE chassis using SolidWorks & ANSYS</h4>
-      <img src="./images/asmitjainUMASS.jpg" alt="My Grad College">
-      <p> - Designed a chassis for Finite Element Analysis and verfied the model for stress, stain, etc</p>
+      <p> Designing, Prototyping & Validating a Digital Motor Controlled 3D Scanner for Macroscopic Medical Application</p>
+      <img src="./images/asmitjainSCANNER.jpg" alt="My 3D Scanning Device">
+      <h4>To circumvent the difficulties encountered during the methods of eye estimation, tape and caliper, there is a need to 
+        develop a prototype which can be combined with latest technologies to get 3D images in a less turnaround time. There 
+        are available devices in the market which are difficult in turning camera at high speed and are slow in image processing 
+        based on the target detection. 
+
+        This study will deal with a design methodology which will help us to get 3D images in a very less turnaround time. 
+        The aim of this study is to generate a devices which can capture high resolution, reliable images and combine them 
+        together using the techniques called Photogrammetry. The primarily target area for this study would be for the medical
+        applications e.g. Monoclonal cells or manufacturing industries for macroscopic product.
+        
+        <img src="./images/asmitjainPHOTOGRMTRY.png" alt="Photogramettry">
+        Photogrammetry is referred to the science in which one makes measurements using photographs. This is the practice of 
+        utilizing accelerated photography along with remote sensing for creating 3D models from two-dimensional photographs.
+        This is a unique application that’s garnered a high level of interest from several relevant industries, businesses, and
+        private individuals.
+
+       Following are a few of the benefits you can attain by applying photogrammetry for industrial use:
+
+      •	A fully automatic process for image acquisition and report generation
+      •	Automation of repetitive tasks with the use of macros
+      •	Compact volume for easy transport
+      •	Faster and more accurate decision making
+
+        Photogrammetry is one of the many fields of three-dimensional measurement associated with surveying. Photogrammetry 
+        has been used for medical applications since midway through the nineteenth century and is now beginning to regain 
+        its past popularity due to recent developments in real time instrumentation. Medical photogrammetry, now part of the 
+        broader field known as biostereometrics, has had varying popularity over the past one hundred and fifty years due to 
+        the many problems encountered during practical applications.</h4>
+        
+        <img src="./images/asmitjainSCANNER.png" alt="Photogramettry">
+        <img src="./images/asmitjainSCANNER1.png" alt="Photogramettry">
+        <img src="./images/asmitjainSCANNER2.png" alt="Photogramettry">
+        <img src="./images/asmitjainSCANNER3.png" alt="Photogramettry">
+        <img src="./images/asmitjainSCANNER4.png" alt="Photogramettry">
       <br>
       <br>
       <br>
