--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
   <div class="prjts">
     <div class="sub-projects">
       <a href="Project1.html" target="_self">
-        <img src="./images/asmitjainthumbnailUMASS.jpg" class="projects-image" alt="Image of my project">
+        <img src="./images/asmitjainthumbnailSCANNER.jpeg" class="projects-image" alt="Image of my project">
         <h3 class="card-title">3D SCANNER FOR MEDICAL APPLICATION</h3>
         <p class="card-subtitle">DESIGN.PROTOTYPING.ANALYSIS</p>
       </a>
