--- a/index.html
+++ b/index.html
@@ -35,11 +35,14 @@
   <div class="landing-header">
     <p id="personal-tag-para"> <span id="personal-tag" class="underline--magical"></span> </p>
     <h1 id="page-header">Hi, I'm Asmit!</h1>
+    <br>
     <h2 id="page-subheader">Welcome to my WORK PORTFOLIO, a virtual showcase of my current and future work. 
-      It is an attempt to build my first digital masterpiece, ever! This website will walk you through over my 
+      It is an attempt to build my first digital masterpiece. This website will walk you through over my 
       engineering career and will help you to understand what my background is, what I have accomplished and what
-      I can achieve in the future.</h2>
-    <p>⚠️CAUTION: This site is under construction. Stay Tuned!.</p>
+      I can achieve in the future.
+    <br>
+      ⚠️CAUTION: This site is under construction. Stay Tuned!.</h2>
+    <!--<p>⚠️CAUTION: This site is under construction. Stay Tuned!.</p>
    </div>
   <br>
       <br>
