--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
       engineering career and will help you to understand what my background is, what I have accomplished and what
       I can achieve in the future.
     <br>
-      ⚠️CAUTION: This site is under construction. Stay Tuned!.</h2>
+      <br>
+      <p>⚠️<i> This site is under construction. Stay Tuned!</i></p></h2>
     <!--<p>⚠️CAUTION: This site is under construction. Stay Tuned!.</p>
    </div>
   <br>
