--- a/index.html
+++ b/index.html
@@ -62,8 +62,19 @@
 
 
       <p>
-        I’m an MS Mechanical Engineer from the University of Massachusetts Amherst with over 2 years of experience in the manufacturing sector.
-        Currently I am working as an Additive Manufactruing & Design Engineer at ADDFab Lab - UMass Amherst.</p>
+        I am a Mechanical Engineer from the University of Massachusetts, Amherst. I recently completed my Master of Science (MS)
+        degree from the College of Engineering in May 2019. I am currently working as an Additive Manufacturing & Design Engineer 
+        at ADDFab Lab in Life Sciences Laboratories.</p>
+        <p>I have a prior industry experience of over two years and research experience of over a year at top-notch labs in UMass. 
+        During my engineering career, I have worked on a variety of projects and have played a part in researching and developing
+        new technologies, product quality improvements, cost reductions efforts for products, efficiency and productivity enhancement,
+        and developing strong business relations with the customers, vendors and suppliers. 
+        </p>
+        <p>I have honed my skills in Product and Process Design & Development, CAD modeling, Advanced Manufacturing and Rapid Prototyping
+        techniques like Additive Manufacturing, which is known as 3D Printing, Lean Six Sigma, Advanced Data Analysis, and a few skills
+        of industrial automation like PLC & HMI/SCADA Systems. I believe that all the industrial experiences coupled with my academics
+        have helped me to augment my project management, problem-solving, communication skills, and collaborative skills in the
+        fast-paced environment. </p>
 
 
       <p><b>Looking for full time opportuinities starting in September 2019.</b></p>
