--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <br>
       <br>
       <p>⚠️<i> This site is under construction. Stay Tuned!</i></p></h2>
-    <!--<p>⚠️CAUTION: This site is under construction. Stay Tuned!.</p>
+    <!--<p>⚠️CAUTION: This site is under construction. Stay Tuned!.</p>-->
    </div>
   <br>
       <br>
