--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
       <h2><span class="underline-magical-sub-header">Contacts</span></h2>
       <div class="contacts-grid">
       <h4>Want to know more? Let's Connect</h4>
-       <img src="./images/asmitjainMIT.jpg" alt="My Under-Grad College">
+       <img src="./images/asmitjainCONTACTS.png" alt="My Under-Grad College">
         <p><b> GMAIL</b>: thisasmitgmail.com </p>
         <p><b> YAHOO</b>: asmitjain@yahoo.in </p>
         <p><b> OUTLOOK</b>: asmitjain@hotmail.com </p>
