--- a/index.html
+++ b/index.html
@@ -198,13 +198,14 @@
  <!-- Contacts Section BEGINS -->
     <div class="contacts" id="contacts">
       <h2><span class="underline-magical-sub-header">Contacts</span></h2>
+      <img src="./images/asmitjainCONTACTS.png" alt="My Under-Grad College">
       <div class="contacts-grid">
-      <h4>Want to know more? Let's Connect</h4>
-       <img src="./images/asmitjainCONTACTS.png" alt="My Under-Grad College">
-        <p><b> GMAIL</b>: thisasmitgmail.com </p>
-        <p><b> YAHOO</b>: asmitjain@yahoo.in </p>
-        <p><b> OUTLOOK</b>: asmitjain@hotmail.com </p>
-        <p><b> UMASS</b>: asmitjain@umass.edu</p>
+      <!--<h4>Want to know more? Let's Connect</h4>-->
+       
+        <p><b>GMAIL</b>: thisasmitgmail.com</p>
+        <p><b>YAHOO</b>: asmitjain@yahoo.in</p>
+        <p><b>OUTLOOK</b>: asmitjain@hotmail.com</p>
+        <p><b>UMASS</b>: asmitjain@umass.edu</p>
       <br>
       <br>
       <br>
