--- a/index.html
+++ b/index.html
@@ -98,12 +98,12 @@
         <h3 class="card-title">Master of Science (MS)</h3>
         <p class="card-subtitle">Mechanical Engineer</p>
       </div>
-      <div class="column">
+      <!--<div class="column">
        <h4>MIT Ujjain - RGPV University</h4>
        <img src="./images/asmitjainMIT.jpg" alt="My Under-Grad College">
         <h3 class="card-title">Bachelor of Science (BS)</h3>
         <p class="card-subtitle">Mechanical Engineer</p>
-      </div>
+      </div>-->
       <br>
       <br>
   </div>
@@ -155,7 +155,7 @@
         <p class="card-subtitle">DESIGN.PROTOTYPING.ANALYSIS</p>
       </a>
     </div>
-    
+    <!--
     <div class="sub-project">
       <a href="Project2.html" target="_blank">
         <img src="./images/asmitjainMIT.jpg" class="project-image" alt="Image of my project2">
@@ -203,19 +203,18 @@
         <p class="card-subtitle">DESIGN . FABRICATION</p>
       </a>
     </div>
-    
+    -->
   </div>
   </div>
   <!-- Projects Section ENDS -->
-  
- <!-- Contacts Section BEGINS -->
+  <!-- Contacts Section BEGINS
     <div class="contacts" id="contacts">
       <h2><span class="underline-magical-sub-header">Contacts</span></h2>
       <div class="contacts-grid">
         <p><b>GMAIL</b>: thisasmitgmail.com</p>
         <p><b>YAHOO</b>: asmitjain@yahoo.in</p>
         <p><b>OUTLOOK</b>: asmitjain@hotmail.com</p>
-        <p><b>UMASS</b>: asmitjain@umass.edu</p>
+        <p><b>UMASS</b>: asmitjain@umass.edu</p>-->
       <br>
       <br>
       <br>
