--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       <div class="education-grid">
       <div class="column">
       <h4>University of Massachusetts</h4>
-       <img src="./images/asmitjainUMASS.jpg" alt="My Grad College">
+       <img src="./images/asmitjainthumbnailUMASS.jpg" alt="My Grad College">
         <h3 class="card-title">Master of Science (MS)</h3>
         <p class="card-subtitle">Mechanical Engineer</p>
       </div>
