--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
   </div>
   <!-- Education Section ENDS -->
   
-  <!-- Experience Section BEGINS -->
+  <!-- Experience Section BEGINS
     <div class="experience" id="experience">
       <h2><span class="underline-magical-sub-header">Experience</span></h2>
       <div class="experience-grid">
