--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
     <div class="sub-project">
       <a href="Project1.html" target="_self">
         <img src="./images/asmitjainthumbnailSCANNER.jpg" class="project-image" alt="Image of my project">
-        <h3 class="card-title">3D SCANNER FOR MEDICAL APPLICATION</h3>
-        <p class="card-subtitle">DESIGN.PROTOTYPING.ANALYSIS</p>
+        <h3 class="card-title">3D Scanner for Medical Applications</h3>
+        <p class="card-subtitle">DESIGN . PROTOTYPING</p>
       </a>
     </div>
     
