--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <span><a href="#about">ABOUT</a></span>
       <span><a href="#education">EDUCATION</a></span>
       <span><a href="#experience">EXPERIENCE</a></span>
-      <span><a href="#projects">PROJECTS</a></span>
+      <span><a href="#project-design">PROJECTS</a></span>
       <!--<span><a href="#license&certifications">LICENCES & CERTIFICATIONS</a></span>-->
       <span><a href="https://drive.google.com/file/d/1mKp8SMaigExeC5JSFWjSTU_Aj5dEMAst/view" target="_blank">RESUME/CV</a></span>
       <!--<span><a href="https://drive.google.com/file/d/1KL8RR6qhlLamPCA4y6LxhANHYedu8bVs/view?usp=sharing">CV</a></span>-->
