--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
     <div class="top-navigation">
       <span><a href="index.html">ASMIT JAIN</a></span>
       <span><a href="#about">ABOUT</a></span>
-      <span><a href="#education">EDUCATION</a></span>
-      <span><a href="#experience">EXPERIENCE</a></span>
+      <!--<span><a href="#education">EDUCATION</a></span>-->
+      <!--<span><a href="#experience">EXPERIENCE</a></span>-->
       <span><a href="#project-design">PROJECTS</a></span>
       <!--<span><a href="#license&certifications">LICENCES & CERTIFICATIONS</a></span>-->
       <span><a href="https://drive.google.com/file/d/1mKp8SMaigExeC5JSFWjSTU_Aj5dEMAst/view" target="_blank">RESUME/CV</a></span>
       <!--<span><a href="https://drive.google.com/file/d/1KL8RR6qhlLamPCA4y6LxhANHYedu8bVs/view?usp=sharing">CV</a></span>-->
-      <span><a href="#contacts">CONTACTS</a></span>
+      <!--<span><a href="#contacts">CONTACTS</a></span>-->
     </div>
   </div>
   <!-- Sticky Header ENDS -->
@@ -88,7 +88,7 @@
   </div>
   <!-- About Section ENDS -->
   
-  <!-- Education Section BEGINS -->
+  <!-- Education Section BEGINS
     <div class="education" id="education">
       <h2><span class="underline-magical-sub-header">Education</span></h2>
       <div class="education-grid">
@@ -103,12 +103,12 @@
        <img src="./images/asmitjainMIT.jpg" alt="My Under-Grad College">
         <h3 class="card-title">Bachelor of Science (BS)</h3>
         <p class="card-subtitle">Mechanical Engineer</p>
-      </div>-->
+      </div>
       <br>
       <br>
   </div>
   </div>
-  <!-- Education Section ENDS -->
+  Education Section ENDS -->
   
   <!-- Experience Section BEGINS
     <div class="experience" id="experience">
